--- a/static/css/visualizations.css
+++ b/static/css/visualizations.css
@@ -84,10 +84,6 @@
 		background-color: #DF6464;
 	}
 
-.loading .treeView {
-	/* visibility: hidden; */
-}
-
 .treeView {
 	visibility: visible;
 	display: block;
@@ -129,7 +125,7 @@
 	position: relative;
 	padding: 0;
 	padding-left: 55px;
-	min-height: 50px;
+	height: 50px;
 }
 
 	.node > .line {
@@ -146,8 +142,6 @@
 	.node.merge > .line {background-color: #DF6464;}
 
 .treeView > .node {
-	padding-bottom: 10px;
-	padding-top: 10px;
 	background: url(../images/versioning-bg.png) repeat-y;
 	background-position: 0 0;
 	background-size: 55px;
